# Typst

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml
backend/: Makefile  celerybeat-schedule  manage.py  pyproject.toml  setup.cfg
backend/api/: urls.py  views.py
backend/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/mediafiles/: serializers.py  views.py
backend/services/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/services/migrations/: 0001_initial.py  0002_zodiacsign.py
backend/subscriptions/: models.py  serializers.py  urls.py  views.py
backend/templates/email/: activate_email_send.html  login_email_send.html  password_reset_email_send.html  send_verification_submission_email.html
backend/typst/: asgi.py  backends.py  celery.py  email.py  settings.py  tasks.py  urls.py  wsgi.py
backend/users/: admin.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/users/management/commands/: conf_site.py  create_subs.py  create_tags.py  create_users.py  create_zodiac.py  createsuperuser.py
backend/users/migrations/: 0001_initial.py
frontend/: .dockerignore  Dockerfile  i18n.json  next.config.js  package-lock.json  package.json  tailwind.config.js
recommendations/: Dockerfile  Makefile  main.py  pyproject.toml
recommendations/source/: RecSys.py  __init__.py  imagecomp.py  textcomp.py
shared_data/: tags.json  zodiacSigns.json
(+91 files in other folders)
