[tool.poetry]
name = "recommendations"
version = "0.1.0"
description = ""
authors = ["JMURv <architect.lock@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python-headless = "4.7.0.72"
scikit-learn = "1.3"
scipy = "1.9.3"
face-recognition = "1.3.0"
dlib = "19.24.2"
nltk = "3.8.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
numpy = "1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
